// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with term renders correctly 1`] = `
<div>
  Filters -
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-40-27"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-3-60"
    >
      <div
        autoFocus={true}
        history={[Function]}
        term="foo-term"
      >
        Search
      </div>
      <div
        name="categories"
        render={[Function]}
      >
        List - 
        <div
          bar="foo"
          history={[Function]}
          list={
            Array [
              Object {
                "foo": "bar",
              },
            ]
          }
          match={
            Object {
              "params": Object {
                "term": "foo-term",
              },
            }
          }
          render={[Function]}
          searchProps={
            Object {
              "autoFocus": true,
              "term": "foo-term",
            }
          }
        >
          renderCategoriesList
        </div>
         -
      </div>
    </div>
    <div
      name="searches"
      path="/search?term=foo-term&categories%5B%5D=123"
      render={[Function]}
      renderError={[Function]}
    >
      List - 
      <div
        bar="foo"
        history={[Function]}
        list={
          Array [
            Object {
              "foo": "bar",
            },
          ]
        }
        match={
          Object {
            "params": Object {
              "term": "foo-term",
            },
          }
        }
      >
        renderList
      </div>
       -
      <div
        color="default"
      >
        foo-error
      </div>
    </div>
  </div>
</div>
`;

exports[`without term renders correctly 1`] = `
<div>
  Filters -
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-40-27"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-md-3-60"
    >
      <div
        autoFocus={true}
        history={[Function]}
        term=""
      >
        Search
      </div>
      <div
        name="categories"
        render={[Function]}
      >
        List - 
        <div
          bar="foo"
          history={[Function]}
          list={
            Array [
              Object {
                "foo": "bar",
              },
            ]
          }
          match={
            Object {
              "params": Object {
                "term": "",
              },
            }
          }
          render={[Function]}
          searchProps={
            Object {
              "autoFocus": true,
              "term": "",
            }
          }
        >
          renderCategoriesList
        </div>
         -
      </div>
    </div>
    <div
      name="searches"
      path="/search?term=&categories%5B%5D=123"
      render={[Function]}
      renderError={[Function]}
    >
      List - 
      <div
        bar="foo"
        history={[Function]}
        list={
          Array [
            Object {
              "foo": "bar",
            },
          ]
        }
        match={
          Object {
            "params": Object {
              "term": "",
            },
          }
        }
      >
        renderList
      </div>
       -
      <div
        color="default"
      >
        foo-error
      </div>
    </div>
  </div>
</div>
`;
